--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "~3.4.8",
-    "logfmt": "~0.21.0"
+    "logfmt": "~0.21.0",
+    "mongodb": "~1.3.23",
+    "mongojs": "~0.10.0"
   },
   "engines": {
     "node": "0.10.x"
